fix alignment of broadcasts

--- a/app/styles/app/layouts/features.sass
+++ b/app/styles/app/layouts/features.sass
@@ -39,6 +39,12 @@
         background-color: rgba(255, 255, 255, 0.3)
   .icon-broadcast
     +colorSVG(white)
+  .broadcasts
+    @media #{$small-only}
+      &:after
+        left: 107px
+    @media #{$medium-up}
+      left: 115px
 
   .logo
     width: 70px
